--- a/tanggapan.html
+++ b/tanggapan.html
@@ -30,7 +30,7 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                TANGGAPAN : <span class="text-muted"> Jalan Rusak oleh yuni</span>
+                                TANGGAPAN : <span class="text-muted"> Jalan Rusak oleh ririnsf</span>
                             </div>
                             <div class="card body">
                                 <form action=""method="post">
